--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,6 @@
 [submodule "project-citas"]
 	path = project-citas
 	url = https://github.com/maudrani/react-practice-citas
-
-[submodule "xinergy"]
-	path = xinergy
-	url = https://github.com/maudrani/react-project-xinergy
+[submodule "Xinergy"]
+	path = Xinergy
+	url = https://github.com/maudrani/react-project-xinergy.git
